--- a/idinput.html
+++ b/idinput.html
@@ -20,7 +20,7 @@
 		<p>Create Room:</p>
 		<p>Enter name of the room</p>
 		<div id="error"></div>
-		<form id="usernameForm2" method="post" action="/second">
+		<form id="usernameForm2" method="post" action="/second:room">
 			<input size="35" type="text" name="username" id="username">
 			<input id="submit" type="submit" value="Submit">
 		</form>        
@@ -29,7 +29,7 @@
 		<p>Join Room:</p>
 		<p>Enter ID of the room to join</p>
 		<div id="error"></div>
-		<form id="usernameForm" method="post" action="/second">
+		<form id="usernameForm" method="post" action="/second:room">
 			<input size="35" type="text" name="username" id="username" style="display: none;">
 			<input size="35" type="text" name="actualname" id="actualname">
 			<input id="submit" type="submit" value="Submit">
@@ -61,54 +61,33 @@
 						return t.substring(t.indexOf('=')+1);
 				}
 			}
-			$('#usernameForm2').submit(function(e){
-				//e.preventDefault();
-				_id = getCookie('oname');				
-				$.cookie('roomname',$username.val());
-				socket.emit('setroomtodb',{id: getCookie('oname'),roomname: $username.val()});
-				$username.val(getCookie('oname'));
-				console.log(_id);
-				socket.emit('new user', {eid: _id, id: getCookie('oname')}, function(data){
-					if(!data){
-						$error.html('No Such ID exists');
-					}
-					//$username.val('');
-				});
-				//$(this).unbind('submit').submit();
-			});
-
-			socket.on('updateroomcookie',function(data){
-				console.log('Fetched room is '+data.roomname);
-				$.cookie('roomname',data.roomname);
-			});
+			$('#usernameForm2').submit(function(e){				
+				$('#usernameForm2').attr('action',"/second:"+$username.val());							
+			});			
 
 			$('#usernameForm').submit(function(e){
-				//e.preventDefault();
-				//emit to db get roomname
-				console.log($aname.val()+" This is the id");
-				socket.emit('getroomname',{id: $aname.val()});			
-				
-				socket.emit('new user', {eid: $aname.val(), id: getCookie('oname')}, function(data){
-					if(!data){
-						$error.html('No Such ID exists');
+				e.preventDefault();
+				//emit to server to check ID and then redirect
+				socket.emit('getroomname',{id: $aname.val()},function(data){
+					console.log('flag '+ data.status);
+					if(data.status){						
+						console.log('name '+data.name);
+						window.location = '/second:'+data.name;
+						//$('#usernameForm').attr('action',"/second:"+data.name);
 					}
-					//$username.val('');
+					else{					
+						alert('No Room exists');	
+						window.location = '/idinput';
+						
+					}
 				});
-				$username.val($aname.val());
-				//$(this).unbind('submit').submit();
+				//return true;	
 			});
 
 			function displayID(){            
 				$('#msg').html('Your unique ID is '+getCookie('oname'));	
 			}
-			//displayID();			
-
-			/*socket.emit('new user', {eid: _id, id: getCookie('oname')}, function(data){
-				if(!data){
-					$error.html('No Such ID exists');
-				}
-				$username.val('');
-			});*/
+			displayID();
 		});
 	</script>
 </body>
